Fancy fixes GTK2 was tweaked a bit. Nautilus desktop font color is now white. Various fixes in GTK3 for readability of some text

--- a/gtk-3.0/apps/nautilus.css
+++ b/gtk-3.0/apps/nautilus.css
@@ -1,6 +1,6 @@
 /* desktop mode */
 .nautilus-desktop.nautilus-canvas-item {
-	color: @bg_color;
+	color: @fg_color;
 	text-shadow: 1 1 alpha (#000000, 0.8);
 }
 
