--- a/gtk-3.0/gtk-widgets.css
+++ b/gtk-3.0/gtk-widgets.css
@@ -70,8 +70,8 @@
  * states *
  **********/
 *:insensitive {
-	color: shade (@theme_bg_color, 0.6);
-	text-shadow: 0 1 alpha (shade (@bg_color, 1.25), 0.5);
+	color: shade (@theme_fg_color, 0.9);
+	text-shadow: 0 1 alpha (shade (@bg_color, 1.25), 0.2);
 }
 
 *:active {
